--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "homework_8",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "name": "homework_8",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
+        "start": "node src/main.js",
+        "load-db": "node src/loadDataSamples.js",
+        "example": "node src/interactionExample.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC"
 }
